Implemented Retrieval of Ethereum Account Balance with web3.js
